jquery.aimms.simple-table.css: Prevent simple-table from overflowing its widget container RE #3037

--- a/MealsRUsWebAppPRO/src/main/aimms/WebUI/resources/javascript/simple-table-widget/src/jquery.aimms.simple-table.css
+++ b/MealsRUsWebAppPRO/src/main/aimms/WebUI/resources/javascript/simple-table-widget/src/jquery.aimms.simple-table.css
@@ -1,5 +1,9 @@
 /* File with widget-specific (behavioral) css */
 
+.tag-simple-table .awf-dock.center {
+	overflow: hidden;
+}
+
 .simpleTableWrap {
 	width:100%;
 	height:100%;
